# runko

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CLAUDE.md  CMakeLists.txt  CMakePresets.json  DenseGrid.h  Doxyfile  INSTALLATION.md  LICENSE  Makefile  README.md  bundle.c++  bundle.h  bundles.c++  bundles.h  cell.cpp  cell.h  cell.hpp  cmakelists.txt  comm.cpp  comm.hpp  common.h  dataContainer.c++  dataContainer.h  definitions.h  definitions.hpp  field.cpp  field.hpp  grid.h  init.hpp  inject.cpp  inject.hpp  io_ascii.cpp  io_ascii.hpp  kebnekaise.sh  main.c++  makefile  maxwell.c++  (+24 more)
analysis/: combine_files.py  merge_nodes.py  parser.py  plot_meshes.py  plot_spectra.py  read_analysis.py  read_fields.py  read_mesh.py  tasker.py
archs/: beskow.sh  hile-install.sh  kebnekaise.sh  lumi-install.sh  macos-install.sh  makefile.clang  makefile.gnu  makefile.kebnekaise  makefile.macOS  rusty.sh  tegner.sh
bindings/: CMakeLists.txt  py_submodules.h  pyactions.c++  pycpl.c++  pyemf.c++  pyemf2.c++  pyffe.c++  pyfields.c++  pypic.c++  pypic2.c++  pyqed.c++  pyrad.c++  pytools.c++  pyvlv.c++  runko.c++  runko_cpp_bindings.c++  runko_cpp_bindings.h  runko_next.c++
bindings/old/: combine_files.py  initialize.py  injector_pic.py  pypic_boundaries.c++  pyplasma.c++  pyplasmatools.c++  sampling.py  timer.py  visualize.py  visualize_pic.py
cmake/: FindRunkoHDF5.cmake  FindSphinx.cmake  lumi-gtl.cmake
core/: communication_common.h  mdgrid_common.h  particles_common.h
coupling/: tile.h
deprecated/: .travis.yml  travis-install-mpi.sh
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  Running shock and tools.rst  algorithms.rst  clusters.rst  conf.py  configuration-parameters.rst  contributing.rst  debugging.rst  dev-workflow.rst  documentation.rst  emf.rst  ffe.rst  fields.rst  fld.rst  index.rst  installation-cpu-rocthrust.rst  installation-mpi4py.rst  installation.rst  messagesize.rst  pic-tutorial.rst  pic.rst  plasma.rst  qed.rst  requirements.txt  shocks.rst  style.rst  theory.rst  units.rst  unittool.rst  usage.rst  vectorization.rst  versions.rst  vlv.rst
docs/APIs/: fields.rst  pic.rst  vlv.rst
docs/_static/: runko_theme.css
docs/params/: algs.csv  io.csv  misc.csv  sim.csv
docs/runko-module/: api.rst  dev-notes.rst  installation.rst  intro.rst  pic-tutorial.rst
em-fields/: damping_fields.c++  damping_fields.h  damping_tile.c++  damping_tile.h  fields.c++  fields.h  tile.c++  tile.cu  tile.cuh  tile.h
emf/: cmakelists.txt  tile.c++  tile.h
ffe/: skinny_yee.c++  skinny_yee.h  slim_grids.c++  slim_grids.h  tile.c++  tile.h
io/: analysis.h  emf_average_field_energy_density.h  fields.h  input_fields.h  input_pic.h  input_vlasov.h  io.h  namer.h  output_analysis.h  output_fields.h  output_pic.h  output_vlasov.h  pic_average_kinetic_energy.h  quick_writer.c++  quick_writer.h  reader.c++  reader.h  tasker.h  test_prtcl_writer.c++  test_prtcl_writer.h  vlasov.h  write_tags.h  writer.c++  writer.h
jobs/: landau.sh  pytest_beskow.sh  shock.sh  shockXL.sh
multirank_tests/: CMakeLists.txt  mpi_unittest.py  test_emf_simulation.py  test_pic_simulation.py  test_testing_setup.py  test_tile_grid_emf.py
notes/: .gitignore  Makefile  aa.bst  aa.cls  aa.dem  allbib.bib  beskow.md  clang-tools.md  debugging.md  debugging2.md  fdm.nb  kebnekaise-setup.md  mpi.md  notes.tex  profiling.md  slurm.md  valgrind.md  variables.md
pic/: README.md  analysis-landau.py  analysis-weibel.py  analyzer.h  cell.h  cell.hpp  comm.hpp  communicate.h  config-landau.ini  config-weibel.ini  config.ini  current_deposit.h  et.py  field.hpp  field_interpolator.h  filters.h  inject.hpp  io.hpp  makefile  mesh.hpp  parameters.hpp  particle.c++  particle.h  particle_alt.c++  pic.cpp  pic.py  plot2d.py  pusher.h  rng.hpp  shapes.h  tasker.h  tile.c++  tile.h
projects/: README.md
prototype/: oneD.py  radpic.py  sampling.py  threeD.py  twoD.py  zeroD.py
python/: CMakeLists.txt  cmakelists.txt  configSetup.py  initialize.py  initialize_ffe.py  initialize_pic.py  initialize_rad.py  injector.py  injector_pic.py  py_submodules.h  pyffe.c++  pyfields.c++  pypic.c++  pypic_boundaries.c++  pyplasma.c++  pyplasmabox.c++  pyplasmatools.c++  pyrad.c++  pytools.c++  pyvlv.c++  runko.c++  sampling.py  timer.py  visualize.py  visualize_amr.py  visualize_pic.py
python/old/: pyplasma.c++  pyplasmatools.c++
pytools/: __init__.py  banner.py  cli.py  conf.py  generators.py  indices.py  io.py  iotools.py  load_grid.py  mpiio_prtcl_reader.py  mpiio_reader.py  sampling.py  scheduler.py  string_manipulation.py  terminal_plot.py  timer.py
qed/: pairing.c++  pairing.h  photon.h  tile.h
radiation/: photon.h  tile.h
runko/: Configuration.py  Simulation.py  TileGrid.py  __init__.py  auto_outdir.py  balance_grid.py  (+20 more)
src/: CMakeLists.txt
src/runko/: communication_common.h  mdgrid_common.h  particles_common.h
src/runko/bindings/: pyemf.c++  pypic.c++  pytools.c++  runko_cpp_bindings.c++  runko_cpp_bindings.h
src/runko/emf/: antenna.h  common.h  edge_bc.h  lerp3D.h  stencil_coefficients.h  tile.c++  tile.h  virtual_tile.c++  virtual_tile.h  yee_lattice.c++  yee_lattice.h  yee_lattice_FDTD2.c++  yee_lattice_current_filter_binomial2.c++  yee_lattice_fdtd2.c++  yee_lattice_interpolate_linear_1st.h  yee_lattice_stencil.c++
src/runko/io/: emf_average_field_energy_density.h  pic_average_kinetic_energy.h
src/runko/io/snapshots/: mpiio_fields.c++  mpiio_fields.h  mpiio_header.h  mpiio_particles.c++  mpiio_particles.h  mpiio_spectra.c++  mpiio_spectra.h  mpiio_writer_base.h
src/runko/pic/: particle.c++  particle.h  particle_boris.h  particle_current_zigzag_1st.c++  particle_faraday.h  particle_higuera_cary.h  reflector_wall.c++  reflector_wall.h  tile.c++  tile.h  tile_communication.c++  virtual_tile.c++  virtual_tile.h
src/runko/tools/: config_parser.c++  config_parser.h  fastlog.h  git-large-blob.pl  gpu_memory.h  has_element.h  hollow_grid.h  lerp.h  linlogspace.h  math.h  run-clang-tidy.py  sample_arrays.h  staggered_grid.h  system.c++  system.h  vector.h
tests/cpp/: CMakeLists.txt  test_unit_testing.c++
(+1050 files in other folders)
